fixed art-item layout issue.

--- a/Django/website/static/css/custom.css
+++ b/Django/website/static/css/custom.css
@@ -26,16 +26,25 @@ body{
   clear: both;
 }
 #home_gallery{
-  width: 100%;
-  margin: 5px;
+  -webkit-column-width: 250px;
+     -moz-column-width: 250px;
+          column-width: 250px;
+  margin: 5px !important;
 }
 @media (min-width: 1024px){
   #home_gallery{
-    column-count: 3;
+    -webkit-column-count: 3;
+       -moz-column-count: 3;
+            column-count: 3;
   }
 }
 @media (min-width: 500px) and (max-width:1024px){
   #home_gallery{
-    column-count:2;
+    -webkit-column-count: 2;
+         -moz-column-count: 2;
+              column-count: 2;
   }
+}
+.card{
+  display: inline-block;
 }
